Change profile repo, fix font and title alignement

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 @tailwind base;
 
 html {
-  font-family: "Segoe UI",SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
 h1 {
